--- a/jeff/package.json
+++ b/jeff/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/cassiecassanova/guidedproject2#readme",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.17.1",
+    "mongodb": "5.6"
+  },
+  "keywords": []
 }
